--- a/CBA.CORE/Views/_ViewImports.cshtml
+++ b/CBA.CORE/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using CBA.Core.Models
+@using CBA.CORE.Models
 @using CBA.Core.Models.ViewModels
+@using CBA.CORE.Models.ViewModels
+@using Microsoft.AspNetCore.Identity
