--- a/CBA.CORE/Views/Account/Login.cshtml
+++ b/CBA.CORE/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <div class="card-body">
             <p class="login-box-msg">Sign in to start your session</p>
 
-            <form method="post" asp-action="login" asp-controller="account">
+            <form method="post" asp-action="login" asp-controller="Account">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="input-group mb-3">                  
                     <input asp-for="UserName" class="form-control" placeholder="User Name">
