--- a/CBA.CORE/Views/Administration/AddRole.cshtml
+++ b/CBA.CORE/Views/Administration/AddRole.cshtml
@@ -20,7 +20,7 @@
             <button type="submit" class="btn btn-primary" style="width:auto">
                 Create Role
             </button>
-            <a asp-controller="account" asp-action="listroles" class="nav-link active btn btn-primary" style="width: auto; margin-top: 2rem;"> Cancel</a>
+            <a asp-controller="Administration" asp-action="listroles" class="nav-link active btn btn-primary" style="width: auto; margin-top: 2rem;"> Cancel</a>
         </div>
     </div>
 </form>
