--- a/CBA.CORE/Views/Administration/EditRole.cshtml
+++ b/CBA.CORE/Views/Administration/EditRole.cshtml
@@ -49,7 +49,7 @@
         </div>
         <div class="card-footer">
             <a asp-controller="Administration" asp-action="EditUsersInRole"
-               asp-route-roleId="@Model.Id" class="btn btn-primary">
+               asp-route-Id="@Model.Id" class="btn btn-primary">
                 Edit role users
             </a>
         </div>
