--- a/CBA.CORE/Views/Administration/ListRoles.cshtml
+++ b/CBA.CORE/Views/Administration/ListRoles.cshtml
@@ -9,7 +9,7 @@
 
 @if (Model.Any())
 {
-    <a class="btn btn-primary mb-3" style="width:auto" asp-controller="account" asp-action="addrole"
+    <a class="btn btn-primary mb-3" style="width:auto" asp-controller="Administration" asp-action="addrole"
        >Add new role</a>
 
     foreach (var role in Model)
@@ -22,7 +22,7 @@
                 <h5 class="card-title">Role Name: @role.Name</h5>
             </div>
             <div class="card-footer">
-                <a asp-controller="account" asp-action="EditRole"
+                <a asp-controller="Administration" asp-action="EditRole"
                    asp-route-id="@role.Id" class="btn btn-primary" style="border-radius: 20px;">
                     Edit Role
                 </a>
