--- a/CBA.CORE/Views/Error/NotFound.cshtml
+++ b/CBA.CORE/Views/Error/NotFound.cshtml
@@ -2,11 +2,11 @@
     ViewBag.Title = "Not Found";
 }
 
-<div style="width: 100vw; height: 100vh;" class="d-flex justify-content-center">
+<div style="width: 60vw">
     <h1>@ViewBag.ErrorMessage</h1>
     @*<h1>@ViewBag.Path</h1>
     <h1>@ViewBag.QS</h1>*@
-    <a asp-action="index" asp-controller="home" class="btn btn-primary">
-        Click here to navigate to the home page
-    </a>
+<a asp-action="index" asp-controller="home" class="btn btn-primary" style="width: auto; height: 5rem;">
+    Click here to navigate to the home page
+</a>
 </div>
