--- a/CBA.CORE/Views/Administration/EditRole.cshtml
+++ b/CBA.CORE/Views/Administration/EditRole.cshtml
@@ -1,4 +1,5 @@
 ﻿@model EditRoleViewModel
+@using CBA.Core.Enums
 
 @{
     ViewBag.Title = "Edit Role";
@@ -8,17 +9,21 @@
 
 <form method="post" class="mt-3">
     @*<div class="form-group row">
-        <label asp-for="Id" class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <input asp-for="Id" disabled class="form-control">
-        </div>
-    </div>*@
+            <label asp-for="Id" class="col-sm-2"></label>
+            <div class="col-sm-10">
+                <input asp-for="Id" disabled class="form-control">
+            </div>
+        </div>*@
     <div class="form-group row">
         <label asp-for="RoleName" class="col-sm-2"></label>
         <div class="col-sm-10">
-            <input asp-for="RoleName" class="form-control">
+            <input asp-for="RoleName" class="form-control" style="margin-bottom: 1rem">
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
+        <select asp-for="State" class="custom-select mr-sm-2" style="width: auto"
+                asp-items="Html.GetEnumSelectList<State>()">
+        </select>
+        <span asp-validation-for="State" class="text-danger"></span>
     </div>
 
     <div asp-validation-summary="All" class="text-danger"></div>
@@ -34,7 +39,7 @@
         <div class="card-header">
             <h3>Users in this role</h3>
         </div>
-        <div class="card-body">
+        <div class="card-body column">
             @if (Model.Users.Any())
             {
                 foreach (var user in Model.Users)
@@ -47,7 +52,7 @@
                 <h5 class="card-title">None at the moment</h5>
             }
         </div>
-        <div class="card-footer">
+        <div class="card-footer row">
             <a asp-controller="Administration" asp-action="EditUsersInRole"
                asp-route-Id="@Model.Id" class="btn btn-primary">
                 Edit role users
