--- a/CBA.CORE/Views/Administration/EditRole.cshtml
+++ b/CBA.CORE/Views/Administration/EditRole.cshtml
@@ -39,12 +39,12 @@
         <div class="card-header">
             <h3>Users in this role</h3>
         </div>
-        <div class="card-body column">
+        <div class="card-body" style="display: flex; flex-direction:column;">
             @if (Model.Users.Any())
             {
                 foreach (var user in Model.Users)
                 {
-                    <h5 class="card-title">@user</h5>
+                    <p style="border-bottom: 1px solid white;">@user</p>
                 }
             }
             else
