--- a/CBA.CORE/Views/Administration/EditUser.cshtml
+++ b/CBA.CORE/Views/Administration/EditUser.cshtml
@@ -12,6 +12,7 @@
         <form method="post" asp-action="edituser" asp-controller="administration">
             <div asp-validation-summary="All" class="text-danger"></div>
 
+            <label asp-for="Username"></label>
             <input asp-for="Username" class="form-control" />
 
             <div class="form-group">
@@ -34,6 +35,15 @@
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
             </div>
+            <div class="form-group row">
+                <label asp-for="UserState" class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-10">
+                    <select asp-for="UserState" class="custom-select mr-sm-2"
+                            asp-items="Html.GetEnumSelectList<UserState>()">
+                    </select>
+                    <span asp-validation-for="UserState" class="text-danger"></span>
+                </div>
+            </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
@@ -41,7 +51,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Submit Edit</button>
-            <a asp-controller="administration" asp-action="listuser" class="btn btn-primary">Cancel</a>
+            <a asp-controller="administration" asp-action="listusers" class="btn btn-primary">Cancel</a>
             <a asp-action="ManageUserRoles" asp-route-Id="@Model.Id"
                class="btn btn-primary">
                 Manage Roles
