--- a/CBA.CORE/Views/Administration/ListRoles.cshtml
+++ b/CBA.CORE/Views/Administration/ListRoles.cshtml
@@ -26,11 +26,15 @@
                    asp-route-id="@role.Id" class="btn btn-primary" style="border-radius: 20px; margin-right: 1rem;">
                     Edit Role
                 </a>
+                <a asp-controller="Administration" asp-action="EditDetail"
+                   asp-route-id="@role.Id" class="btn btn-primary" style="border-radius: 20px; margin-right: 1rem;">
+                   Details
+                </a>
                 <a asp-action="ManageRoleClaims" asp-route-id="@role.Id"
                    style="width:auto" class="btn btn-primary">
                     Manage Claims
                 </a>
-               
+
                 @*<a href="#" class="btn btn-danger">Disable</a>*@
             </div>
         </div>
