--- a/CBA.CORE/Views/Administration/EditUser.cshtml
+++ b/CBA.CORE/Views/Administration/EditUser.cshtml
@@ -56,7 +56,10 @@
                class="btn btn-primary">
                 Manage Roles
             </a>
-
+            <button type="submit" asp-action="EditUserPassword" asp-route-Id="@Model.Id"
+               class="btn btn-primary">
+                Reset Password
+            </button>
         </form>
 
     </div>
