--- a/CBA.CORE/Views/Customer/Index.cshtml
+++ b/CBA.CORE/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Customer>
+﻿@*@model IEnumerable<Customer>
 @{
     ViewBag.title = "Users List";
 }
@@ -42,4 +42,4 @@
     {
         <p> No Items have been recorded </p>
     }
-</div>
+</div>*@
