--- a/CBA.CORE/Views/Error/NotFound.cshtml
+++ b/CBA.CORE/Views/Error/NotFound.cshtml
@@ -2,10 +2,8 @@
     ViewBag.Title = "Not Found";
 }
 
-<div style="width: 60vw">
+<div style="width: 60vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
     <h1>@ViewBag.ErrorMessage</h1>
-    @*<h1>@ViewBag.Path</h1>
-    <h1>@ViewBag.QS</h1>*@
 <a asp-action="index" asp-controller="home" class="btn btn-primary" style="width: auto; height: 5rem;">
     Click here to navigate to the home page
 </a>
