--- a/CBA.CORE/Views/Customer/Index.cshtml
+++ b/CBA.CORE/Views/Customer/Index.cshtml
@@ -1,45 +1,75 @@
-﻿@model IEnumerable<Customer>
+﻿@model IEnumerable<CBA.Core.Models.Customer>
+
 @{
-    ViewBag.title = "Users List";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>List Of Users</h1>
-<div class="container p3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">View users</h2>
-        </div>
-        <div class="col-6 text-right">
-            <a class="btn btn-primary" asp-controller="Customer" asp-action="add">Create New Customer</a>
-        </div>
-    </div>
+<h2>Customers</h2>
 
-    @if (Model.Count() > 0)
+<p>
+    @*@Html.ActionLink("Create New", "Create")*@
+    <a asp-controller="customer" asp-action="Create" style="margin-right: 1rem" class="btn btn-primary">Create Customer</a>
+    <a asp-controller="customeraccount" asp-action="index" class="btn btn-info">View Customer Accounts</a>
+    <a asp-controller="customeraccount" asp-action="SelectCustomer" class="btn btn-info">Select Customer</a>
+
+
+</p>
+<table class="table table-bordered table-striped">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CustomerLongID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FullName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Address)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Gender)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
     {
-        <table class="table table-bordered table-striped" style="width: 100%">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Full Name</th>
-                    <th>Email</th>
-                    <th>Gender</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td width="30%">@item.ID</td>
-                        <td width="30%">@item.FullName</td>
-                        <td width="30%">@item.Email</td>
-                        <td width="30%">@item.Gender</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomerLongID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Gender)
+            </td>
+            <td>
+                @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                <a asp-controller="customer" asp-action="Edit" class="btn btn-primary">Edit</a>
+                <a asp-controller="customer" asp-action="Details" class="btn btn-primary">Details</a>
+                <a asp-controller="customer" asp-action="Delete" class="btn btn-primary">Delete</a>
+
+
+            </td>
+        </tr>
     }
-    else
-    {
-        <p> No Items have been recorded </p>
-    }
-</div>
+
+</table>
