--- a/CBA.CORE/Views/GLCategories/Index.cshtml
+++ b/CBA.CORE/Views/GLCategories/Index.cshtml
@@ -15,7 +15,7 @@
 <p>
     @Html.ActionLink("Create New", "Create", new { @class = "btn btn-primary" })
 </p>
-<table class="table">
+<table class="table table-bordered table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
