--- a/CBA.CORE/Views/Shared/_Layout.cshtml
+++ b/CBA.CORE/Views/Shared/_Layout.cshtml
@@ -202,6 +202,14 @@
                                 </a>
                             </li>
                             <li class="nav-item menu-open">
+                                <a asp-controller="AccountTypeManagements" asp-action="index" class="nav-link">
+                                    <i class="nav-icon fas fa-th"></i>
+                                    <p>
+                                        Account Management
+                                    </p>
+                                </a>
+                            </li>
+                            <li class="nav-item menu-open">
                                 <a asp-controller="tellers" asp-action="index" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
@@ -210,7 +218,7 @@
                                 </a>
                             </li>
                             <li class="nav-item menu-open">
-                                <a href="pages/widgets.html" class="nav-link">
+                                <a asp-controller="customer" asp-action="index" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
                                         Customer Management
@@ -244,28 +252,20 @@
                         }
                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("user"))
                         {
-                            <li class="nav-item menu-open">
-                                <a asp-controller="Administration" asp-action="listroles" class="nav-link">
-                                    <i class="nav-icon fas fa-th"></i>
-                                    <p>
-                                        Role Management
-                                    </p>
-                                </a>
-                            </li>
-                            <li class="nav-item menu-open">
-                                <a asp-controller="Administration" asp-action="listusers" class="nav-link">
-                                    <i class="nav-icon fas fa-th"></i>
-                                    <p>
-                                        User Management
-                                    </p>
-                                </a>
-                            </li>
 
                             <li class="nav-item menu-open">
                                 <a asp-controller="glcategories" asp-action="index" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
                                         GL Management
+                                    </p>
+                                </a>
+                            </li>
+                            <li class="nav-item menu-open">
+                                <a asp-controller="accountypemanagements" asp-action="index" class="nav-link">
+                                    <i class="nav-icon fas fa-th"></i>
+                                    <p>
+                                        Account Management
                                     </p>
                                 </a>
                             </li>
@@ -278,7 +278,7 @@
                                 </a>
                             </li>
                             <li class="nav-item menu-open">
-                                <a href="pages/widgets.html" class="nav-link">
+                                <a asp-controller="customer" asp-action="index" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
                                         Customer Management
