--- a/CBA.CORE/Views/Tellers/Index.cshtml
+++ b/CBA.CORE/Views/Tellers/Index.cshtml
@@ -37,7 +37,9 @@
     <td>
         @Html.DisplayFor(modelItem => item.AccountBalance)
     </td>
-    <td></td>
+    <td>
+        <a asp-controller="tellers" asp-action="delete" asp-route-id="@item.Id" class="btn btn-primary">Unassign</a>
+    </td>
 </tr>}
 
 </table>
