--- a/CBA.CORE/Views/Shared/_Layout.cshtml
+++ b/CBA.CORE/Views/Shared/_Layout.cshtml
@@ -226,10 +226,10 @@
                                 </a>
                             </li>
                             <li class="nav-item menu-open">
-                                <a href="pages/widgets.html" class="nav-link">
+                                <a asp-controller="glpostings" asp-action="index" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
-                                        Transactions
+                                        GL Posting
                                     </p>
                                 </a>
                             </li>
@@ -289,7 +289,7 @@
                                 <a href="pages/widgets.html" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
-                                        Transactions
+                                        GL Posting
                                     </p>
                                 </a>
                             </li>
