--- a/CBA.CORE/Views/CustomerAccount/Create.cshtml
+++ b/CBA.CORE/Views/CustomerAccount/Create.cshtml
@@ -52,12 +52,29 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CustomerID, "Customer Name", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CustomerLongID, "Customer ID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("CustomerID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DisplayFor(model => model.CustomerLongID, "CustomerLongID", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CustomerName, "Customer Name", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.CustomerName, "CustomerName", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @*<div class="form-group">
+        @Html.LabelFor(model => model.CustomerID, "Customer ID", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.CustomerID, "CustomerID", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
+        </div>
+    </div>*@
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
